--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@
   // successful.  See statusChangeCallback() for when this call is made.
   function testAPI() {
     console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me', function(response) {
-      console.log('Successful login for: ' + response);
+    FB.api('/me?fields=id,name,picture', function(response) {
+      console.log('Successful login for: ' + response.name);
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
+        document.getElementById('status').innerHTML =
+        'Profile Picture, ' + response.picture.data.url + '!';
     });
   }
 </script>
@@ -87,7 +89,7 @@
   the FB.login() function when clicked.
 -->
 
-<fb:login-button scope="public_profile,email,profile_picture" onlogin="checkLoginState();">
+<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 
 <div id="status">
