--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       document.getElementById('status').innerHTML =
         'Thanks for logging in, ' + response.name + '!';
         document.getElementById('status').innerHTML =
-        'Profile Picture, ' + response.picture.data.url + '!';
+        '<img src="response.picture.data.url"/>';
     });
   }
 </script>
