--- a/index.html
+++ b/index.html
@@ -73,13 +73,14 @@
   // successful.  See statusChangeCallback() for when this call is made.
   function testAPI() {
     console.log('Welcome!  Fetching your information.... ');
-    FB.api('/me?fields=id,name,picture', function(response) {
-      console.log('Successful login for: ' + response.name);
-      document.getElementById('status').innerHTML =
-        'Thanks for logging in, ' + response.name + '!';
-        document.getElementById('status').innerHTML =
-        '<img src='+ response.picture.data.url +'/>';
-    });
+    FB.api(
+  '/me',
+  'GET',
+  {"fields":"id,name,picture"},
+  function(response) {
+      console.log(response);
+  }
+);
   }
 </script>
 
