updated with pictures and resume

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
       <div class="container main">
             <div class="row">
+              <img src="img/banner.jpg" alt="banner"/>
               <div class="col-sm">
                <h2>dreamer, thinker, creator</h2>
                
